# computer-club-test-task

./: CMakeLists.txt  README.md  computer_club.cpp  computer_club.h  main.cpp  test_computer_club.cpp
